# Operating-Systems

./: Creator.cpp  Main.cpp  README.md  Reporter.cpp  employee.cpp  employee.h
colloquium/: CMakeLists.txt  fibonacci.cpp  linked_list.cpp  main.cpp  palindrome.cpp
colloquium api rest/: GlobalExceptionHandler.java  Task.java  TaskController.java  TaskRepository.java  TaskService.java  TaskStatus.java  TestTaskController.java  TestTaskRepository.java  TestTaskService.java  TestTaskValidation.java  TodoApplication.java  application-test.yml  application.properties  docker-compose.yml  pom.xml
colloquium/include/: fibonacci.h  linked_list.h  palindrome.h
colloquium/tests/: test_fibonacci.cpp  test_linked_list.cpp  test_palindrome.cpp
lab1/: CMakeLists.txt  Reporter.cpp
lab1/cmake_os_lab1/: CMakeLists.txt  Creator.cpp  Main.cpp  employee.cpp
lab1/tests/: CMakeLists.txt  Tests.cpp
lab2 c++20/: CMakeLists.txt
lab2 c++20/include/: array_utils.h  average_thread.h  min_max_thread.h  thread_guard.h
lab2 c++20/src/: array_utils.cpp  average_thread.cpp  main.cpp  min_max_thread.cpp
lab2 c++20/tests/: test_average_thread.cpp  test_min_max_thread.cpp
lab2 c++98/: CMakeLists.txt
lab2 c++98/include/: array_utils.h  average_thread.h  min_max_thread.h
lab2 c++98/src/: array_utils.cpp  average_thread.cpp  main.cpp  min_max_thread.cpp
lab2 c++98/tests/: test_average_thread.cpp  test_min_max_thread.cpp
lab3/: CMakeLists.txt
lab3/include/: marker_manager.h  shared_array.h
lab3/src/: main.cpp  marker_manager.cpp  shared_array.cpp
lab3/tests/: tests.cpp
lab4/: CMakeLists.txt
lab4/include/: file_queue.h
lab4/src/: file_queue.cpp  receiver.cpp  sender.cpp
lab4/tests/: tests.cpp
lab5/: CMakeLists.txt
lab5/include/: employee.h  file_storage.h  pipe_protocol.h
lab5/src/: client.cpp  employee.cpp  file_storage.cpp  pipe_protocol.cpp  server.cpp
lab5/tests/: tests.cpp
